package pizzeria.config;

public class BakerConfig {
    private int id;
    private int cookingTimeMs;

    public int getId() {
        return id;
    }

    public int getCookingTimeMs() {
        return cookingTimeMs;
    }
}
