package pizzeria.config;

public class CourierConfig {
    private int id;
    private int trunkSize;
    private int deliveryTimeMs;

    public int getId() {
        return id;
    }

    public int getTrunkSize() {
        return trunkSize;
    }

    public int getDeliveryTimeMs() {
        return deliveryTimeMs;
    }
}
