package pizzeria.core;

public enum OrderState {
    QUEUED, BEING_COOKED, COOKED, IN_STORAGE, IN_DELIVERY, DELIVERED
}