package pizzeria.lifecycle;

public interface PizzeriaLifecycle {
    void start() throws InterruptedException;
}
