package pizzeria.logging;

public interface PizzeriaLogger {
    void log(String message);
}
